# IMOMD-RRTStar-rs

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DEV_LOG.md  README.md  pyproject.toml  requirements.txt
config/: algorithm_config.yaml  algorithm_config_custom.yaml  algorithm_config_frb.yaml  algorithm_config_quincy_large.yaml  algorithm_config_seattle.yaml  osm_way_config.yaml
demo/: BROWSER_USER_STORIES.md  README.md  pyproject.toml  run.sh
demo/app/: main.py  v2x_sim.py  verify.py
demo/static/: app.js  index.html  style.css
demo/tests/: conftest.py  test_user_stories.py  test_verify.py
docs/: README.md  navigation-plugins.md  verification.md
docs/superpowers/plans/: 2026-07-14-realtime-pluggable-navigation.md
docs/superpowers/specs/: 2026-07-13-imomd-rrtstar-design.md  2026-07-14-parallel-greedy-imomd-race-design.md  2026-07-14-realtime-pluggable-navigation-design.md
python/IMOMD_RRTStar/: IMOMD_RRTStar.pyi  __init__.py  __init__.pyi
scripts/: compare_cpp_reference.py  download_chicago_osm.py  download_osm_maps.py  test_demo_api.py
src/: error.rs  lib.rs  main.rs  prelude.rs
src/baseline/: ana_star.rs  bi_astar.rs  common.rs  mod.rs
src/command/: mod.rs
src/config/: mod.rs
src/experiment/: mod.rs
src/geo/: mod.rs
src/graph/: mod.rs  traffic.rs
src/map/: custom.rs  fake.rs  mod.rs  osm.rs
src/navigation/: events.rs  gate.rs  imomd_plugin.rs  mod.rs  plugin.rs  session.rs  shortest.rs  tour.rs
src/python/: mod.rs
src/rrt/: mod.rs  planner.rs  tree.rs
src/rtsp/: eci_gen.rs  greedy.rs  mod.rs
src/storage/: mod.rs
src/system/: mod.rs
src/types/: mod.rs
test/: test_module.py  test_navigation_session.py  test_planner.py
tests/: correctness_oracle.rs  experiment_regression.rs  integration_custom_graph.rs  integration_graph.rs  integration_large_scale.rs  integration_osm.rs  navigation_session.rs  planner_fake_map.rs
tests/fixtures/: custom_graph.yaml  tiny.osm
