[package]
name = "IMOMD-RRTStar"
version = "0.1.0"
edition = "2021"
description = "Informable Multi-Objective and Multi-Directional RRT* System for Path Planning — Rust reimplementation of https://arxiv.org/abs/2205.14853"

[lib]
name = "IMOMD_RRTStar"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
pyo3 = { version = "0.23", optional = true }
rand = "0.8"
rayon = "1.10"
rustc-hash = "2"
serde = { version = "1.0.180", features = ["derive"] }
serde_yaml = "0.9.25"
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "1"

[dev-dependencies]
approx = "0.5"

[package.metadata.maturin]
python-source = "python"
features = ["python", "extension-module"]
bindings = "pyo3"
