[package]
name = "IMOMD-RRTStar"
version = "0.1.0"
edition = "2021"
description = "Informable Multi-Objective and Multi-Directional RRT* — Rust reproduction of https://arxiv.org/abs/2205.14853"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Euraxluo/IMOMD-RRTStar-rs"
homepage = "https://github.com/Euraxluo/IMOMD-RRTStar-rs"
documentation = "https://github.com/Euraxluo/IMOMD-RRTStar-rs#readme"
keywords = ["path-planning", "rrt", "motion-planning", "anytime", "robotics"]
categories = ["science", "algorithms"]
authors = ["Euraxluo <euraxluo@outlook.com>"]

[lib]
name = "IMOMD_RRTStar"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
pyo3 = { version = "0.23", optional = true }
rand = "0.8"
rayon = "1.10"
rustc-hash = "2"
serde = { version = "1.0.180", features = ["derive"] }
serde_yaml = "0.9.25"
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "1"

[dev-dependencies]
approx = "0.5"

[package.metadata.maturin]
python-source = "python"
features = ["python", "extension-module"]
bindings = "pyo3"
