[project]
name = "imomd-v2x-demo"
version = "0.1.0"
description = "FastAPI V2X traffic demo for IMOMD-RRTStar"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-playwright>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
